force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Due_Amount__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>